--- a/UiAutomationMcpServer/UiAutomationMcpServer.csproj
+++ b/UiAutomationMcpServer/UiAutomationMcpServer.csproj
@@ -17,5 +17,9 @@
     <PackageReference Include="System.Drawing.Common" Version="8.0.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\UiAutomationWorker\UiAutomationWorker.csproj" />
+  </ItemGroup>
+
 
 </Project>
