Refactor UiAutomationWorker to integrate new operations and enhance logging
- Updated Program.cs to improve JSON serialization options and logging levels.
- Added new operations: GetValue, Toggle, Select, ExpandCollapse, Scroll, ScrollIntoView, Transform, and Dock.
- Implemented timeout handling for operations to prevent hanging.
- Enhanced element search logic to support both Name and AutomationId.
- Introduced new models in UiAutomationMcp.Models for request and response handling.
- Updated project references and solution structure to include new models project.

--- a/UiAutomationMcpServer/UiAutomationMcpServer.csproj
+++ b/UiAutomationMcpServer/UiAutomationMcpServer.csproj
@@ -19,6 +19,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\UiAutomationWorker\UiAutomationWorker.csproj" />
+    <ProjectReference Include="..\UiAutomationMcp.Models\UiAutomationMcp.Models.csproj" />
   </ItemGroup>
 
 
