--- a/UiAutomationWorker/UiAutomationWorker.csproj
+++ b/UiAutomationWorker/UiAutomationWorker.csproj
@@ -24,4 +24,8 @@
     </Reference>
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\UiAutomationMcp.Models\UiAutomationMcp.Models.csproj" />
+  </ItemGroup>
+
 </Project>
