Add unit tests for OperationExecutor and parameter validation
- Implemented unit tests for OperationExecutor class to verify supported operations, operation info retrieval, and operation support checks.
- Created ParameterValidationTests to validate input parameters for various operations, ensuring correct behavior for valid and invalid inputs.
- Established a test strategy document outlining unit, integration, and end-to-end testing approaches.
- Removed outdated UIAutomationWorkerTests as they were no longer relevant.
- Updated project references to include UiAutomationWorker for testing dependencies.

--- a/UiAutomationMcp.Tests/UiAutomationMcp.Tests.csproj
+++ b/UiAutomationMcp.Tests/UiAutomationMcp.Tests.csproj
@@ -26,6 +26,7 @@
   <ItemGroup>
     <ProjectReference Include="..\UiAutomationMcpServer\UiAutomationMcpServer.csproj" />
     <ProjectReference Include="..\UiAutomationMcp.Models\UiAutomationMcp.Models.csproj" />
+    <ProjectReference Include="..\UiAutomationWorker\UiAutomationWorker.csproj" />
   </ItemGroup>
 
 </Project>
