feat: Implement WindowPatternHandler for managing window states
- Added WindowPatternHandler class to handle window state operations including SetWindowState, GetWindowState, CloseWindow, and WaitForWindowState.
- Integrated window state management into the OperationExecutor for seamless operation execution.
- Created InputProcessor and OutputProcessor services for handling input and output operations.
- Established dependency injection in Program.cs to register all necessary services and handlers.
- Updated project files and solution structure to accommodate new worker project.
- Refactored tests to align with new service architecture and ensure compatibility with updated interfaces.

--- a/UIAutomationMCP.Server/UIAutomationMCP.Server.csproj
+++ b/UIAutomationMCP.Server/UIAutomationMCP.Server.csproj
@@ -3,6 +3,7 @@
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>net8.0-windows</TargetFramework>
+    <UseWindowsForms>true</UseWindowsForms>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
   </PropertyGroup>
@@ -16,8 +17,8 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\UiAutomationWorker\UiAutomationWorker.csproj" />
-    <ProjectReference Include="..\UiAutomationMcp.Models\UiAutomationMcp.Models.csproj" />
+    <ProjectReference Include="..\UIAutomationMCP.Worker\UIAutomationMCP.Worker.csproj" />
+    <ProjectReference Include="..\UIAutomationMCP.Models\UiAutomationMcp.Models.csproj" />
   </ItemGroup>
 
 
