Implement UI Automation Pattern Handlers for Selection, Text, and Window Operations
- Added SelectionItemPatternHandler to manage selection operations (select, add to selection, remove from selection, get selection state).
- Introduced TextPatternHandler for text manipulation (get text, select text, find text, get text selection).
- Created WindowPatternHandler for window state management (set window state, get window state, close window, wait for window state).
- Developed InProcessUIAutomationWorker to execute operations using the new pattern handlers.
- Enhanced error handling and logging throughout the new implementations.

--- a/UIAutomationMCP.Server/UIAutomationMCP.Server.csproj
+++ b/UIAutomationMCP.Server/UIAutomationMCP.Server.csproj
@@ -17,7 +17,10 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\UIAutomationMCP.Worker\UIAutomationMCP.Worker.csproj" />
+    <FrameworkReference Include="Microsoft.WindowsDesktop.App" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\UIAutomationMCP.Models\UiAutomationMcp.Models.csproj" />
   </ItemGroup>
 
