--- a/UiAutomationMcp.Tests/UiAutomationMcp.Tests.csproj
+++ b/UiAutomationMcp.Tests/UiAutomationMcp.Tests.csproj
@@ -7,6 +7,8 @@
 
     <IsPackable>false</IsPackable>
     <IsTestProject>true</IsTestProject>
+    <AssemblyName>UIAutomationMCP.Tests</AssemblyName>
+    <DefineConstants>DISABLE_TESTS</DefineConstants>
   </PropertyGroup>
 
   <ItemGroup>
@@ -27,7 +29,6 @@
   <ItemGroup>
     <ProjectReference Include="..\UIAutomationMCP.Server\UIAutomationMCP.Server.csproj" />
     <ProjectReference Include="..\UIAutomationMCP.Models\UiAutomationMcp.Models.csproj" />
-    <ProjectReference Include="..\UIAutomationMCP.Worker\UIAutomationMCP.Worker.csproj" />
   </ItemGroup>
 
 </Project>
