feat: Add UIAutomationMCP.Models and UIAutomationMCP.Worker projects
- Created UIAutomationMCP.Models project with initial configuration for .NET 9.0.
- Implemented WorkerExecutor class for managing worker API calls with timeout and exception handling.
- Added ElementPropertyOperations and ElementSearchOperations for element property and search operations.
- Introduced InvokeOperations and ValueOperations for handling invoke and value patterns.
- Developed WorkerBasedElementSearchService to utilize worker API for element searching.
- Updated Program.cs to register new services and replace UIAutomationExecutor with WorkerExecutor.
- Refactored existing services (InvokeService, ValueService) to use WorkerExecutor.
- Added extension methods for AutomationElement to safely retrieve patterns and properties.
- Created ConditionBuilder for building search conditions for UI Automation.
- Added project references and necessary package dependencies for the Worker project.

--- a/UIAutomationMCP.Server/UIAutomationMCP.Server.csproj
+++ b/UIAutomationMCP.Server/UIAutomationMCP.Server.csproj
@@ -20,6 +20,9 @@
     <FrameworkReference Include="Microsoft.WindowsDesktop.App" />
   </ItemGroup>
 
-
+  <ItemGroup>
+    <ProjectReference Include="..\UIAutomationMCP.Models\UIAutomationMCP.Models.csproj" />
+    <ProjectReference Include="..\UIAutomationMCP.Worker\UIAutomationMCP.Worker.csproj" />
+  </ItemGroup>
 
 </Project>
