--- a/UIAutomationMCP.Worker/UIAutomationMCP.Worker.csproj
+++ b/UIAutomationMCP.Worker/UIAutomationMCP.Worker.csproj
@@ -20,7 +20,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\UIAutomationMCP.Models\UIAutomationMCP.Models.csproj" />
+    <ProjectReference Include="..\UIAutomationMCP.Shared\UIAutomationMCP.Shared.csproj" />
   </ItemGroup>
 
 </Project>
