feat: Add safe process termination method and update tests for parallel execution support; include xunit.runner.json for configuration

--- a/UiAutomationMcp.Tests/UiAutomationMcp.Tests.csproj
+++ b/UiAutomationMcp.Tests/UiAutomationMcp.Tests.csproj
@@ -31,4 +31,10 @@
     <ProjectReference Include="..\UIAutomationMCP.Shared\UIAutomationMCP.Shared.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Content Include="xunit.runner.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+  </ItemGroup>
+
 </Project>
