--- a/UIAutomationMCP.Server/UIAutomationMCP.Server.csproj
+++ b/UIAutomationMCP.Server/UIAutomationMCP.Server.csproj
@@ -7,12 +7,11 @@
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
     <AssemblyName>uiautomation-mcp</AssemblyName>
-    <PackAsTool>true</PackAsTool>
-    <ToolCommandName>uiautomation-mcp</ToolCommandName>
-    <PackageId>UIAutomationMCP</PackageId>
     <Version>0.1.0</Version>
     <Authors>Locomorange</Authors>
     <Description>Windows UI Automation Model Context Protocol (MCP) server</Description>
+    <PublishAot>true</PublishAot>
+    <RuntimeIdentifiers>win-x64;win-x86;win-arm64</RuntimeIdentifiers>
   </PropertyGroup>
 
   <ItemGroup>
