--- a/UIAutomationMCP.Worker/UIAutomationMCP.Worker.csproj
+++ b/UIAutomationMCP.Worker/UIAutomationMCP.Worker.csproj
@@ -11,6 +11,9 @@
     <RuntimeIdentifiers>win-x64;win-x86;win-arm64</RuntimeIdentifiers>
     <InvariantGlobalization>false</InvariantGlobalization>
     <StripSymbols>true</StripSymbols>
+    <BuiltInComInteropSupport>true</BuiltInComInteropSupport>
+    <EnableComHosting>true</EnableComHosting>
+    <EnableCOMReflection>true</EnableCOMReflection>
   </PropertyGroup>
 
   <ItemGroup>
