UIAutomationMCP: 新しいコア機能を追加し、プロジェクトファイルを更新。BaseProcess、IOperation、OperationRegistry、TypedEventData、ElementFinderService などの新しいクラスを実装し、依存性注入を強化。

--- a/UIAutomationMCP.Monitor/UIAutomationMCP.Monitor.csproj
+++ b/UIAutomationMCP.Monitor/UIAutomationMCP.Monitor.csproj
@@ -9,7 +9,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\UIAutomationMCP.Common\UIAutomationMCP.Common.csproj" />
+    <ProjectReference Include="..\UIAutomationMCP.Core\UIAutomationMCP.Core.csproj" />
+    <ProjectReference Include="..\UIAutomationMCP.UIAutomation\UIAutomationMCP.UIAutomation.csproj" />
     <ProjectReference Include="..\UIAutomationMCP.Shared\UIAutomationMCP.Shared.csproj" />
   </ItemGroup>
 
