BaseProcess, IOperation, OperationRegistry, EventData クラスを削除し、PatternProperties クラスを新規作成。プロジェクトファイルにプロジェクト参照を追加。

--- a/UIAutomationMCP.Server/UIAutomationMCP.Server.csproj
+++ b/UIAutomationMCP.Server/UIAutomationMCP.Server.csproj
@@ -26,6 +26,7 @@
 
 
   <ItemGroup>
+    <ProjectReference Include="..\UIAutomationMCP.Core\UIAutomationMCP.Core.csproj" />
     <ProjectReference Include="..\UIAutomationMCP.Shared\UIAutomationMCP.Shared.csproj" />
     <ProjectReference Include="..\UIAutomationMCP.Worker\UIAutomationMCP.Worker.csproj" />
   </ItemGroup>
