--- a/UIAutomationMCP.Worker/UIAutomationMCP.Worker.csproj
+++ b/UIAutomationMCP.Worker/UIAutomationMCP.Worker.csproj
@@ -30,7 +30,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\UIAutomationMCP.Core\UIAutomationMCP.Core.csproj" />
-    <ProjectReference Include="..\UIAutomationMCP.UIAutomation\UIAutomationMCP.UIAutomation.csproj" />
+    <ProjectReference Include="..\UIAutomationMCP.Common\UIAutomationMCP.Common.csproj" />
     <ProjectReference Include="..\UIAutomationMCP.Models\UIAutomationMCP.Models.csproj" />
   </ItemGroup>
 
