Refactor unit tests to replace ISubprocessExecutor with IOperationExecutor
- Updated references in SelectionPatternTests, SynchronizedInputPatternTests, TogglePatternTests, TransformPatternParameterValidationTests, TransformPatternTests, VirtualizedItemPatternTests, and WindowPatternTests.
- Removed unnecessary comments and improved code readability.
- Adjusted test descriptions and assertions for clarity.
- Ensured compliance with Microsoft specifications in test cases.

--- a/UiAutomationMcp.Tests/UiAutomationMcp.Tests.csproj
+++ b/UiAutomationMcp.Tests/UiAutomationMcp.Tests.csproj
@@ -29,7 +29,9 @@
   <ItemGroup>
     <ProjectReference Include="..\UIAutomationMCP.Server\UIAutomationMCP.Server.csproj" />
     <ProjectReference Include="..\UIAutomationMCP.Worker\UIAutomationMCP.Worker.csproj" />
-    <ProjectReference Include="..\UIAutomationMCP.Shared\UIAutomationMCP.Shared.csproj" />
+    <ProjectReference Include="..\UIAutomationMCP.Core\UIAutomationMCP.Core.csproj" />
+    <ProjectReference Include="..\UIAutomationMCP.Models\UIAutomationMCP.Models.csproj" />
+    <ProjectReference Include="..\UIAutomationMCP.Common\UIAutomationMCP.Common.csproj" />
   </ItemGroup>
 
   <ItemGroup>
