オペレーションの自動登録をサポートするための拡張メソッドを追加し、関連するリクエストクラスの名前を変更しました。また、ソースジェネレーターを追加してオペレーションの登録コードを自動生成できるようにしました。

--- a/UIAutomationMCP.Monitor/UIAutomationMCP.Monitor.csproj
+++ b/UIAutomationMCP.Monitor/UIAutomationMCP.Monitor.csproj
@@ -25,4 +25,8 @@
     <FrameworkReference Include="Microsoft.WindowsDesktop.App" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\UIAutomationMCP.SourceGenerators\UIAutomationMCP.SourceGenerators.csproj" OutputItemType="Analyzer" ReferenceOutputAssembly="false" />
+  </ItemGroup>
+
 </Project>
