--- a/UIAutomationMCP.Worker/UIAutomationMCP.Worker.csproj
+++ b/UIAutomationMCP.Worker/UIAutomationMCP.Worker.csproj
@@ -34,4 +34,8 @@
     <ProjectReference Include="..\UIAutomationMCP.Models\UIAutomationMCP.Models.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\UIAutomationMCP.SourceGenerators\UIAutomationMCP.SourceGenerators.csproj" OutputItemType="Analyzer" ReferenceOutputAssembly="false" />
+  </ItemGroup>
+
 </Project>
