プロジェクトファイルの設定を更新し、不要なプロパティを削除して依存関係を修正しました。

--- a/UIAutomationMCP.Subprocess.Core/UIAutomationMCP.Subprocess.Core.csproj
+++ b/UIAutomationMCP.Subprocess.Core/UIAutomationMCP.Subprocess.Core.csproj
@@ -4,9 +4,9 @@
     <TargetFramework>net9.0-windows</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
-    <UseWindowsForms>true</UseWindowsForms>
     <AssemblyName>UIAutomationMCP.Subprocess.Core</AssemblyName>
     <RootNamespace>UIAutomationMCP.Subprocess.Core</RootNamespace>
+    <IsAotCompatible>true</IsAotCompatible>
   </PropertyGroup>
 
   <ItemGroup>
