--- a/UIAutomationMCP.Server/UIAutomationMCP.Server.csproj
+++ b/UIAutomationMCP.Server/UIAutomationMCP.Server.csproj
@@ -14,6 +14,7 @@
     <RuntimeIdentifiers>win-x64;win-x86;win-arm64</RuntimeIdentifiers>
     <InvariantGlobalization>false</InvariantGlobalization>
     <StripSymbols>true</StripSymbols>
+    <PublishTrimmed>true</PublishTrimmed>
   </PropertyGroup>
 
   <ItemGroup>
