--- a/UIAutomationMCP.Subprocess.Monitor/UIAutomationMCP.Subprocess.Monitor.csproj
+++ b/UIAutomationMCP.Subprocess.Monitor/UIAutomationMCP.Subprocess.Monitor.csproj
@@ -5,10 +5,14 @@
     <TargetFramework>net9.0-windows</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
-    <UseWindowsForms>true</UseWindowsForms>
     <AssemblyName>UIAutomationMCP.Subprocess.Monitor</AssemblyName>
     <Product>UIAutomationMCP Subprocess Monitor</Product>
     <RootNamespace>UIAutomationMCP.Subprocess.Monitor</RootNamespace>
+    <PublishAot>true</PublishAot>
+    <RuntimeIdentifiers>win-x64;win-x86;win-arm64</RuntimeIdentifiers>
+    <InvariantGlobalization>false</InvariantGlobalization>
+    <StripSymbols>true</StripSymbols>
+    <PublishTrimmed>true</PublishTrimmed>
   </PropertyGroup>
 
   <ItemGroup>
@@ -27,6 +31,7 @@
   <ItemGroup>
     <FrameworkReference Include="Microsoft.WindowsDesktop.App" />
   </ItemGroup>
+
 
 
 </Project>
