--- a/UIAutomationMCP.Subprocess.Worker/UIAutomationMCP.Subprocess.Worker.csproj
+++ b/UIAutomationMCP.Subprocess.Worker/UIAutomationMCP.Subprocess.Worker.csproj
@@ -12,6 +12,7 @@
     <RuntimeIdentifiers>win-x64;win-x86;win-arm64</RuntimeIdentifiers>
     <InvariantGlobalization>false</InvariantGlobalization>
     <StripSymbols>true</StripSymbols>
+    <PublishTrimmed>true</PublishTrimmed>
     <BuiltInComInteropSupport>true</BuiltInComInteropSupport>
     <EnableComHosting>true</EnableComHosting>
     <EnableCOMReflection>true</EnableCOMReflection>
