--- a/UIAutomationMCP.Subprocess.Monitor/UIAutomationMCP.Subprocess.Monitor.csproj
+++ b/UIAutomationMCP.Subprocess.Monitor/UIAutomationMCP.Subprocess.Monitor.csproj
@@ -8,11 +8,13 @@
     <AssemblyName>UIAutomationMCP.Subprocess.Monitor</AssemblyName>
     <Product>UIAutomationMCP Subprocess Monitor</Product>
     <RootNamespace>UIAutomationMCP.Subprocess.Monitor</RootNamespace>
-    <PublishAot>true</PublishAot>
+    <PublishAot>false</PublishAot>
     <RuntimeIdentifiers>win-x64;win-x86;win-arm64</RuntimeIdentifiers>
     <InvariantGlobalization>false</InvariantGlobalization>
     <StripSymbols>true</StripSymbols>
-    <PublishTrimmed>true</PublishTrimmed>
+    <PublishTrimmed>false</PublishTrimmed>
+    <TrimMode>partial</TrimMode>
+    <BuiltInComInteropSupport>true</BuiltInComInteropSupport>
   </PropertyGroup>
 
   <ItemGroup>
