--- a/UIAutomationMCP.Subprocess.Worker/UIAutomationMCP.Subprocess.Worker.csproj
+++ b/UIAutomationMCP.Subprocess.Worker/UIAutomationMCP.Subprocess.Worker.csproj
@@ -8,14 +8,13 @@
     <AssemblyName>UIAutomationMCP.Subprocess.Worker</AssemblyName>
     <Product>UIAutomationMCP Subprocess Worker</Product>
     <RootNamespace>UIAutomationMCP.Subprocess.Worker</RootNamespace>
-    <PublishAot>true</PublishAot>
+    <PublishAot>false</PublishAot>
     <RuntimeIdentifiers>win-x64;win-x86;win-arm64</RuntimeIdentifiers>
     <InvariantGlobalization>false</InvariantGlobalization>
     <StripSymbols>true</StripSymbols>
-    <PublishTrimmed>true</PublishTrimmed>
+    <PublishTrimmed>false</PublishTrimmed>
+    <TrimMode>partial</TrimMode>
     <BuiltInComInteropSupport>true</BuiltInComInteropSupport>
-    <EnableComHosting>true</EnableComHosting>
-    <EnableCOMReflection>true</EnableCOMReflection>
   </PropertyGroup>
 
   <ItemGroup>
