--- a/UIAutomationMCP.Subprocess.Core/UIAutomationMCP.Subprocess.Core.csproj
+++ b/UIAutomationMCP.Subprocess.Core/UIAutomationMCP.Subprocess.Core.csproj
@@ -23,6 +23,7 @@
     <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" version="9.0.0" />
     <PackageReference Include="System.Text.Json" Version="9.0.0" />
     <PackageReference Include="System.Management" Version="9.0.0" />
+    <PackageReference Include="MessagePack" Version="2.5.192" />
   </ItemGroup>
 
 </Project>
