--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -82,16 +82,8 @@ jobs:
     - name: Build with Framework-Dependent AOT
       run: |
         $runtime = "${{ matrix.architecture }}"
-        # Use existing publish-aot.ps1 and remove Runtime folder afterwards
-        powershell -ExecutionPolicy Bypass -File publish-aot.ps1 -CleanFirst -Runtime $runtime
-        
-        # Remove Runtime folder for framework-dependent distribution
-        $publishPath = "publish/aot-$runtime"
-        $runtimePath = "$publishPath/Runtime"
-        if (Test-Path $runtimePath) {
-          Remove-Item -Path $runtimePath -Recurse -Force
-          Write-Host "Removed Runtime folder for framework-dependent distribution"
-        }
+        # Use existing publish-aot.ps1 with -NoRuntime for distribution builds
+        powershell -ExecutionPolicy Bypass -File publish-aot.ps1 -CleanFirst -Runtime $runtime -NoRuntime
       shell: pwsh
       
     - name: Create release archive
